# tenmado-transform

./: .dockerignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml
app/: main.py
app/routers/: checkrouter.py  firestorerouter.py  samplerouter.py  transformrouter.py
app/services/: checkservice.py  firestoreservice.py  transformservice.py
app/sqls/checkservice/: checkload.sql  checkmaster.sql
app/sqls/firestoreservice/: selectkubunmolargearea.sql  selectmolargearea.sql  selectprocessedweek.sql
app/sqls/transformservice/: t_week_temps_fillna.sql  t_week_weather_fillna.sql  t_week_weather_temps.sql
app/utils/: bq.py  config.py  decorator.py  files.py  gcs.py  jinja2.py  logger.py
app/yamls/: config.py  config.yaml
