[tool.poetry]
name = "tenmado-transform"
version = "0.1.0"
description = ""
authors = ["杉本階嗣"]

[tool.poetry.dependencies]
python = "3.9.4"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
orjson = "^3.6.4"
numpy = "^1.21.4"
pandas = "^1.3.4"
google-cloud-storage = "^1.42.3"
google-cloud-bigquery = "^2.30.1"
google-cloud-core = "^2.2.1"
google-cloud-logging = "^2.7.0"
Jinja2 = "^3.0.3"
PyYAML = "^6.0"
pyarrow = "^6.0.1"
google-cloud-firestore = "^2.3.4"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
